# ScoreSync4US-cpp

./: CMakeLists.txt  Dockerfile.linux  Dockerfile.windows  FileWatcher.cpp  FileWatcher.h  README.md  clean-rebuild.bat  clean-rebuild.sh  config.cpp  config.h  docker-compose.yml  list.cpp  list.h  login.cpp  login.h  main.cpp  setting.cpp  setting.h
.github/workflows/: release.yml
